refactor: 7/13 코드리뷰 반영(컨트롤러의 비즈니스 로직, 도메인 의존 수정)